--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -710,5 +710,5 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          directory: downloaded-artifacts
+          directory: .
           verbose: true
