Revert "fix: dir"
This reverts commit ad6faf4a256d244b3b0057acaa7bf6b8f25fa20f.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -710,5 +710,5 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
-          directory: .
+          directory: downloaded-artifacts
           verbose: true
