Revert "feat: try to let frb_rust use exactly same version of flutter_rust_bridge_macros to avoid bugs (does not work locally yet)"
This reverts commit dff3a2bc7bf2dbb73ea4f7ceeeecd12e71f2c0b2.

--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -15,7 +15,7 @@ chrono = { workspace = true, optional = true }
 threadpool = "1.8.1"
 lazy_static = { workspace = true }
 parking_lot = "0.12.1"
-flutter_rust_bridge_macros = "=2.0.0-dev.1"
+flutter_rust_bridge_macros = { workspace = true }
 uuid = { workspace = true, optional = true }
 log = "0.4"
 backtrace = { workspace = true }
