--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,9 +33,9 @@ uuid = "1.1.2"
 thiserror = "1.0"
 backtrace = "0.3.68"
 
-flutter_rust_bridge_macros = { path = "frb_macros", version = "1" }
-flutter_rust_bridge = { path = "frb_rust", default-features = false, version = "1" }
-flutter_rust_bridge_codegen = { path = "frb_codegen", version = "1" }
+flutter_rust_bridge_macros = { path = "frb_macros", version = "=1.82.6" }
+flutter_rust_bridge = { path = "frb_rust", default-features = false, version = "=1.82.6" }
+flutter_rust_bridge_codegen = { path = "frb_codegen", version = "=1.82.6" }
 
 [profile.release.package.flutter_rust_bridge_codegen]
 strip = "debuginfo"
