feat: ci section

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -274,6 +274,35 @@ jobs:
 
   # ----------------------------------- test -----------------------------------
 
+  test_mimic_quickstart:
+    name: 'Test :: MimicQuickstart'
+    runs-on: ${{ matrix.image }}
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - windows-2019
+          - macos-11
+          - ubuntu-20.04
+
+    steps:
+      # setup
+      - uses: catchpoint/workflow-telemetry-action@v1
+        with:
+          comment_on_pr: false
+      - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
+          components: rustfmt
+      - uses: dart-lang/setup-dart@v1
+        with:
+          sdk: stable
+          architecture: x64
+
+      # execute
+      - run: ./frb_internal test-mimic-quickstart
+
   test_rust:
     name: 'Test :: Rust'
     runs-on: ${{ matrix.info.image }}
