fix: REPLACE_ME_RUST_FRB_DEPENDENCY

--- a/frb_codegen/assets/integration_template/rust/Cargo.toml
+++ b/frb_codegen/assets/integration_template/rust/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2018"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-flutter_rust_bridge = { path = "../../../frb_rust" }
+flutter_rust_bridge = REPLACE_ME_RUST_FRB_DEPENDENCY
