--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -47,6 +47,7 @@ jobs:
           cache: true
           flutter-version: ${{ env.FRB_MAIN_FLUTTER_VERSION }}
           architecture: x64
+      - uses: cargo-bins/cargo-binstall@main
 
       # execute
       - run: ./frb_internal post-release-mimic-quickstart --codegen-install-mode ${{ matrix.codegen_install_mode }}
