--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -31,6 +31,11 @@ jobs:
           - cargo-binstall
           - scoop
           - homebrew
+        exclude:
+          - {image: windows-2019, codegen_install_mode: homebrew}
+          - {image: macos-11, codegen_install_mode: scoop}
+          - {image: ubuntu-20.04, codegen_install_mode: homebrew}
+          - {image: ubuntu-20.04, codegen_install_mode: scoop}
 
     steps:
       # setup
