fix: checkout submodule

--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -43,6 +43,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
