--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,6 +31,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: ${{ env.FRB_MAIN_DART_VERSION }}
@@ -57,6 +59,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: subosito/flutter-action@v2
         with:
           cache: true
@@ -73,6 +77,8 @@ jobs:
     steps:
       # setup
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: subosito/flutter-action@v2
         with:
           cache: true
@@ -248,6 +254,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
@@ -291,6 +299,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
@@ -331,6 +341,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ matrix.info.version || env.FRB_MAIN_RUST_VERSION }}
@@ -382,6 +394,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
@@ -419,6 +433,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dart-lang/setup-dart@v1
         with:
           sdk: ${{ env.FRB_MAIN_DART_VERSION }}
@@ -466,6 +482,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
@@ -502,6 +520,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: ${{ env.FRB_MAIN_RUST_VERSION }}
@@ -539,6 +559,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: subosito/flutter-action@v2
         with:
           cache: true
@@ -596,6 +618,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: "Start Simulator"
         run: |
           # list all devices
@@ -644,6 +668,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       # https://docs.flutter.dev/get-started/install/linux#linux-prerequisites
       - if: runner.os == 'Linux'
         run: sudo apt-get install clang cmake git ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
@@ -674,6 +700,8 @@ jobs:
         with:
           comment_on_pr: false
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - uses: subosito/flutter-action@v2
         with:
           cache: true
@@ -724,6 +752,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
 
       - name: Download artifacts
         uses: actions/download-artifact@v4
