--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -54,8 +54,9 @@ jobs:
           cache: true
           flutter-version: ${{ env.FRB_MAIN_FLUTTER_VERSION }}
           architecture: x64
-      - uses: cargo-bins/cargo-binstall@main
-      - if: runner.os == 'Windows'
+      - if: matrix.codegen_install_mode == 'cargo-binstall'
+        uses: cargo-bins/cargo-binstall@main
+      - if: runner.os == 'Windows' && matrix.codegen_install_mode == 'scoop'
         shell: pwsh
         run: |
           Set-ExecutionPolicy -ExecutionPolicy RemoteSigned -Scope CurrentUser
