--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -25,7 +25,7 @@ jobs:
         image:
           - windows-2019
           - macos-11
-          - ubuntu-20.04
+          - ubuntu-latest
         codegen_install_mode:
           - cargo-install
           - cargo-binstall
