--- a/.github/workflows/post_release.yaml
+++ b/.github/workflows/post_release.yaml
@@ -24,7 +24,8 @@ jobs:
       matrix:
         image:
           - windows-2019
-          - macos-11
+          # need macos-"13" because https://github.com/fzyzcjy/flutter_rust_bridge/issues/1225
+          - macos-13
           - ubuntu-latest
         codegen_install_mode:
           - cargo-install
