--- a/frb_rust/Cargo.toml
+++ b/frb_rust/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "flutter_rust_bridge"
 edition.workspace = true
+rust-version = "1.69.0"
 version.workspace = true
 description.workspace = true
 license.workspace = true
