changes testing for the MSRV by using an image with an explicit rust version installed

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,6 +10,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   FRB_MAIN_RUST_VERSION: 1.74.0
+  FRB_MSRV_RUST_VERSION: 1.68.0
   FRB_MAIN_DART_VERSION: 3.2.0
   FRB_MAIN_FLUTTER_VERSION: 3.16.0
 
@@ -104,21 +105,30 @@ jobs:
       - run: ./frb_internal generate-website
 
   # ----------------------------------- codegen -----------------------------------
-  msrv:
-    name: 'Test :: FRB Codegen :: MSRV'    
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+  # instead of running this explicit test for frb_codegen and frb_rust only, we run the test for
+  # all rust packages in the job "test_rust". While this would not be needed for these other packages,
+  # we avoid a ci dependency to cargo-msrv.
+  # However, the code is left commented here in case this decission changes.
+  # msrv:
+  #   name: 'Test :: FRB Codegen :: MSRV'    
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
 
-    - name: Install Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
+  #   - name: Install Rust
+  #     uses: actions-rs/toolchain@v1
+  #     with:
+  #       toolchain: stable
 
-    - name: Run cargo msrv
-      run: |
-        cargo install cargo-msrv
-        cargo msrv --path frb_codegen verify
+  #   - name: Verify MSRV for frb_codegen
+  #     run: |
+  #       cargo install cargo-msrv
+  #       cargo msrv --path frb_codegen verify
+
+  #   - name: Verify MSRV for frb_rust
+  #     run: |
+  #       cargo install cargo-msrv
+  #       cargo msrv --path frb_rust verify
 
   generate_run_frb_codegen_command_generate:
     name: 'Generate :: FRB Codegen :: Command Generate'
@@ -354,6 +364,8 @@ jobs:
             version: nightly
           - image: ubuntu-latest
             version: nightly-2023-12-16
+          - image: ubuntu-latest
+            version: ${{ env.FRB_MSRV_RUST_VERSION }}
 
     steps:
       # setup
