--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -280,7 +280,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: ${{ github.job }}--${{ matrix.image_and_name.image }}--benchmark
-          path: target/coverage
+          path: frb_example/pure_dart/build/simple_benchmark/benchmark_result.json
 
   bench_upload:
     name: 'Bench :: Upload'
@@ -310,7 +310,7 @@ jobs:
         with:
           name: Flutter Rust Bridge Benchmark
           tool: customSmallerIsBetter
-          output-file-path: frb_example/pure_dart/build/simple_benchmark/benchmark_result.json
+          output-file-path: merged_benchmark.json
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
 
