--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -11,7 +11,7 @@
 - dbsxdbsx: Allow generating multiple Rust and Dart files. Fix lint. Update doc. Add logging.
 - GregoryConrad: Add doc to setup frb inside a Dart/Flutter library.
 - huang12zheng: Support type aliases and nested ones. Tweak code generation. Fix rust_build_and_test on Mac. Improve CI logic and cache. Remove bridge field in model.
-- trobanga: Add support for `[T;N]` structs. Add `usize` support. Add a cmd argument. Separate dart tests. Fix fallible list case. Fix test compile.
+- trobanga: Add support for `[T;N]` structs. Add `usize` support. Add a cmd argument. Separate dart tests. Fix fallible list case. Fix test compile. Fix Result + RustAutoOpaque.
 - MnlPhlp: Support macros and will auto expand. Allow mirror types in streams.
 - SoLongAndThanksForAllThePizza: Refactor and enhance SyncReturn to support more types. Refactor post-release CI.
 - hsfzxjy: Fix SyncReturn use-after-free bug.
