--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -68,6 +68,7 @@
 - jaiakash: Fix doc link.
 - feber: Fix doc link.
 - satvikpendem: 'Little co-work #989.'
+- damywise: Fix a typo.
 - wxitcode: Fix a typo.
 - rustui: Fix a typo.
 - escwxyz: Fix a typo.
