--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -49,6 +49,7 @@
 - TENX-S: Improve doc. Reproduce a bug.
 - polypixeldev: Improve doc.
 - CicadaCinema: Bump version. Improve doc.
+- CosmicHorrorDev: Change deps.
 - w1th0utnam3: Improve message.
 - vincent-herlemont: Loosen version.
 - zaynetro: Improve doc.
