--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -499,7 +499,7 @@
       "login": "CosmicHorrorDev",
       "name": "CosmicHorror",
       "avatar_url": "https://avatars.githubusercontent.com/u/30302768?v=4",
-      "profile": "http://cosmichorror.dev",
+      "profile": "https://cosmichorror.dev",
       "contributions": [
         "code"
       ]
