--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -47,6 +47,7 @@
 - aran: Fix pubspec. Bump version.
 - syndim: Add a bracket to box.
 - TENX-S: Improve doc. Reproduce a bug.
+- patmuk: Set MSRV.
 - polypixeldev: Improve doc.
 - CicadaCinema: Bump version. Improve doc.
 - CosmicHorrorDev: Change deps.
