--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -480,7 +480,7 @@
       "login": "patmuk",
       "name": "Patrick Mukherjee",
       "avatar_url": "https://avatars.githubusercontent.com/u/2045440?v=4",
-      "profile": "http://patrick.mukherjee.de",
+      "profile": "https://patrick.mukherjee.de",
       "contributions": [
         "code"
       ]
