--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -65,6 +65,7 @@
 - utilForever: Fix typos.
 - not-holar: Fix typos.
 - Stonks3141: Fix doc credit.
+- adsouza: Fix doc grammar.
 - vimaxwell: Fix doc link.
 - lker-dev: Fix doc link.
 - jaiakash: Fix doc link.
