--- a/.all-contributors-custom.yaml
+++ b/.all-contributors-custom.yaml
@@ -19,7 +19,7 @@
 - alanlzhang: Add generation for Dart metadata. Enhance module parser. Fix enum in struct. Fix linter.
 - erikas-taroza: Support list of primitive enums. Make enum camelCase. Warn wrong path. Fix cargo expand.
 - SiongSng: Finish implementing exception hierarchy. Fix SyncReturn bug.
-- JustSimplyKyle: Also finish implementing exception hierarchy.
+- JustSimplyKyle: Also finish implementing exception hierarchy. Allow ignore function.
 - Zaitam: Fix when method return struct. Partial migration to Dart 3.
 - coder0xff: Discuss binding unmodified Rust. Refactor SupportedInnerType. Extra codegen tester.
 - nitn3lav: Nested `struct`s without `Box`.
